# axum_learning

./: Cargo.toml  readme.md
axum-learn-01/: Cargo.toml
axum-learn-01/src/: main.rs
axum-learn-01/static/: index.html
axum-learn-02/: Cargo.toml
axum-learn-02/src/: main.rs
axum-learn-03/: Cargo.toml
axum-learn-03/src/: main.rs
generate-random-number/: Cargo.toml
generate-random-number/src/: main.rs
