[package]
name = "axum_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.1", features = ["full"] }

[workspace]
members = [
    "generate-random-number",
    "axum-learn-01",
    "axum-learn-02",
    "axum-learn-03"
]