[package]
name = "axum-learn-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["ws", "headers"] }
headers = "0.3.8"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
futures = "0.3.24"